--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#">Home</a>
         <a href="#">Noticias</a>
         <a href="#">Curiosidades</a>
-        <a href="#">Contato</a>
+        <a href="#">Contatos</a>
     </nav>
 
     <main>
